# q

./: .gitignore  Cargo.toml  Makefile  README.md  idea.md  implentation-report.md  q.1
debian/: changelog  control  rules
src/: lib.rs
